WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
37188
WebCore::page::Geolocation::m_shouldClearCache is not used
https://bugs.webkit.org/show_bug.cgi?id=37188
Summary
WebCore::page::Geolocation::m_shouldClearCache is not used
Greg Bolsinga
Reported
2010-04-06 21:08:10 PDT
It can safely be removed. Part of
http://trac.webkit.org/changeset/56188
.
Attachments
patch to remove the unused data member
(2.02 KB, patch)
2010-04-06 21:11 PDT
,
Greg Bolsinga
darin
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Greg Bolsinga
Comment 1
2010-04-06 21:11:40 PDT
Created
attachment 52700
[details]
patch to remove the unused data member
Greg Bolsinga
Comment 2
2010-04-06 22:15:19 PDT
Fixed with
r57194
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug