https://bugs.webkit.org/show_bug.cgi?id=37188 WebCore::page::Geolocation::m_shouldClearCache is not used.

Reviewed by Darin Adler.

* page/Geolocation.cpp:
(WebCore::Geolocation::Geolocation): Remove m_shouldClearCache.
* page/Geolocation.h:
(WebCore::Geolocation::): Ditto.

Canonical link: https://commits.webkit.org/48487@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@57194 268f45cc-cd09-0410-ab3c-d52691b4dbfc